@@ -1,8 +1,17 @@
+2018-10-08  Carl Hetherington  <cth@carlh.net>
+
+	* Fix bad parsing of ASS lines embedded into FFmpeg files
+	and containing commas.
+
 2018-09-25  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.12.12 released.
 
 2018-09-16  Carl Hetherington  <cth@carlh.net>
+
+	* Add option to open a DCP in the player (#1312).
+
+2018-06-08  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.12.11 released.
 
